# cs442-542-f22

./: .gitignore  README.md  cacheline.c  dependencies.c  dependencies_omp.c  embarassingly_parallel.cpp  matmat.cpp  matmat_orig.cpp  matmat_unroll_options.cpp  mpi.cpp  mpi_communicator.c  mpi_debugging.cpp  mpi_io.cpp  mpi_oneside.cpp  mpi_send.cpp  ping_pong.cpp  stream.c  threads.c
MPI4PY/: hello_world.py  mpi_send.py
cuda/: matmat.cu
cuda/mpi_matmat/: CMakeLists.txt
cuda/mpi_matmat/examples/: CMakeLists.txt  time_cuda_matmat.cpp  time_mpi_matmat.cpp
cuda/mpi_matmat/src/: CMakeLists.txt  cuda_matmat.cu  mpi_matmat.cpp  mpi_matmat.hpp
cuda/mpi_matmat/src/tests/: CMakeLists.txt  test_mpi_matmat.cpp
mpi_matmat/: cannon.cpp  cannon_solution.cpp  fox.cpp  mpi_matmat.cpp  mpi_matmat.hpp  simple.cpp
mpi_plus_x/: shared_mem.cpp
ping_pong/: mac_ping_pong.out  plot_ping_pong.py
runscripts/: interactive_script_wheeler.sh  wheeler_script
sparse_matrix/: matrix_market.cpp  matrix_market.hpp  mpi  mpi_sparse_mat  mpi_sparse_mat.cpp  par_IO  par_IO.cpp  par_binary_IO.cpp  spgemm  spgemm.cpp  spmv
sparse_matrix/mpi_sparse_mat.dSYM/Contents/: Info.plist
sparse_matrix/mpi_sparse_mat.dSYM/Contents/Resources/DWARF/: mpi_sparse_mat
sparse_matrix/suitesparse/: Dubcova2_0.mtx  Dubcova2_1.mtx  Dubcova2_10.mtx  Dubcova2_11.mtx  Dubcova2_12.mtx  Dubcova2_13.mtx  Dubcova2_14.mtx  Dubcova2_15.mtx  Dubcova2_2.mtx  Dubcova2_3.mtx  Dubcova2_4.mtx  Dubcova2_5.mtx  Dubcova2_6.mtx  Dubcova2_7.mtx  Dubcova2_8.mtx  Dubcova2_9.mtx  plot_mat.py  split_mat.py
